issue in navbar collapse solved

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -64,7 +64,7 @@
         padding-right: 15px;
     }
     .nav{
-        background: #fff;
+        background: black;
         padding: 0px 15px;
     }
     .header_top .nav{
